refactor: :art: new design of web component

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + Vue + TS</title>
   </head>
   <body>
-    <zerologin-auth url="http://localhost:3333" public-id="0a1b66db-cf4b-4b98-8823-74a8e6e136a6"></zerologin-auth>
+    <div style="border:1px solid black;padding: 10px;">
+      <zerologin-auth url="https://login.dolu.dev" public-id="d595aad5-4593-4a36-980e-42e0e8a447c1"></zerologin-auth>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
