--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div style="border:1px solid black;padding: 10px;">
-      <zerologin-auth url="https://login.dolu.dev" public-id="d595aad5-4593-4a36-980e-42e0e8a447c1"></zerologin-auth>
+      <zerologin-auth url="https://login.zerologin.co" public-id="d595aad5-4593-4a36-980e-42e0e8a447c1"></zerologin-auth>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
