add Sigauth component

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div style="border:1px solid black;padding: 10px;">
-      <zerologin-auth url="https://login.zerologin.co" public-id="d595aad5-4593-4a36-980e-42e0e8a447c1"></zerologin-auth>
+      <zerologin-sigauth url="http://localhost:3333" public-id="8211676a-6011-4873-8823-e9b387ac480b"></zerologin-auth>
+      <!-- <zerologin-auth url="https://login.zerologin.co" public-id="d595aad5-4593-4a36-980e-42e0e8a447c1"></zerologin-auth> -->
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
